feat: добавлен прототип страницы это другое

--- a/works/index.html
+++ b/works/index.html
@@ -318,12 +318,38 @@
                     <h3>Windows, Spectrum</h3>
                     <h2>Под лейблом:</h2>
                     <h3>Hahahoj</h3>
-                    <!-- <div class="">
-                        <input class="tools-start start-button" type="button" value="СКАЧАТЬ">
-                    </div> -->
                 </div>    
             </article>
-            <div class="section theme04 page006">10</div>
+            <article class="section theme05 page006">
+                <div class="title-part__markup">
+                    <h1>Это другое</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Slaine:CoB</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>TyranoScript,JS,CSS</h3>
+                    <h2>Платформы:</h2>
+                    <h3>Windows, Android</h3>
+                    <h2>Под лейблом:</h2>
+                    <h3>Retrogomer</h3>
+                    <div class="">
+                        <input class="others-start start-button" type="button" value="СКАЧАТЬ">
+                    </div>
+                </div>
+                <div class="description-part__markup background-others">
+                    <div class="description-others">
+                        <h2>You are Slaine in Cauldron of Blood:</h2>
+                        <hr>
+                        <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles.wav" controls>Джунгли зовут!</audio>
+                        <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles-Shadow Theme.wav" controls>Джунгли зовут! Теневая тема</audio>
+                        <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/TheFinalHour.wav" controls>Последний час</audio>
+                        <hr class="hr-limiter">
+                        <div>
+                            <span>Последние версии игры:</span>
+                            <a href="https://cloud.mail.ru/public/8dHe/223QV6doe" target="_blank">💾 лежат тут</a>  
+                        </div>
+                    </div>
+                </div>
+            </article>
         </div>
 
         <div class="buttons">
