feat: добавлено video с ukko

--- a/works/index.html
+++ b/works/index.html
@@ -323,7 +323,7 @@
             <article class="section theme05 page006">
                 <div class="title-part__markup">
                     <h1>Это другое</h1>
-                    <h2>Название проекта:</h2>
+                    <!-- <h2>Название проекта:</h2>
                     <h3>Slaine:CoB</h3>
                     <h2>Использованные технологии:</h2>    
                     <h3>TyranoScript,JS,CSS</h3>
@@ -333,15 +333,16 @@
                     <h3>Retrogomer</h3>
                     <div class="">
                         <input class="others-start start-button" type="button" value="СКАЧАТЬ">
-                    </div>
+                    </div> -->
+                    <video src="https://hahahoj.github.io/smallsite/works/Pages/others/ukkooptimized.ogv"></video>
                 </div>
                 <div class="description-part__markup background-others">
                     <div class="description-others">
-                        <h2>You are Slaine in Cauldron of Blood:</h2>
+                        <h2>Немного моей фоновой музыки для виртуальных новелл:</h2>
                         <hr>
-                        <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles.wav" controls>Джунгли зовут!</audio>
-                        <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles-Shadow Theme.wav" controls>Джунгли зовут! Теневая тема</audio>
-                        <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/TheFinalHour.wav" controls>Последний час</audio>
+                        <br><p>Джунгли зовут!</p> <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles.wav" controls></audio>
+                        <br><br><p>Джунгли зовут! Теневая тема</p><audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles-Shadow Theme.wav" controls></audio>
+                        <br><br><p>Последний час</p><audio src="https://hahahoj.github.io/smallsite/works/Pages/others/TheFinalHour.wav" controls></audio>
                         <hr class="hr-limiter">
                         <div>
                             <span>Последние версии игры:</span>
