feat: добавлен последний слайд

--- a/works/index.html
+++ b/works/index.html
@@ -322,32 +322,21 @@
             </article>
             <article class="section theme05 page006">
                 <div class="title-part__markup">
-                    <h1>Это другое</h1>
-                    <!-- <h2>Название проекта:</h2>
-                    <h3>Slaine:CoB</h3>
-                    <h2>Использованные технологии:</h2>    
-                    <h3>TyranoScript,JS,CSS</h3>
-                    <h2>Платформы:</h2>
-                    <h3>Windows, Android</h3>
-                    <h2>Под лейблом:</h2>
-                    <h3>Retrogomer</h3>
-                    <div class="">
-                        <input class="others-start start-button" type="button" value="СКАЧАТЬ">
-                    </div> -->
-                    <video src="https://hahahoj.github.io/smallsite/works/Pages/others/ukkooptimized.ogv"></video>
+                    <h1>Это другое...</h1>
+                    <video id="ukko" src="https://hahahoj.github.io/smallsite/works/Pages/others/ukkooptimized.ogv" loop muted autoplay preload></video>
+                    <h2>В планах доделать на досуге полную сагу о Слейне 
+                        (готовы 90% ресурсов к первым двум частям в версии для ZX-Spectrum и 
+                        были собраны три первых модуля в PC версии.
+                    </h2>
                 </div>
                 <div class="description-part__markup background-others">
                     <div class="description-others">
-                        <h2>Немного моей фоновой музыки для виртуальных новелл:</h2>
+                        <h2>Немного ресурсов из не вышедших проектов:</h2>
                         <hr>
                         <br><p>Джунгли зовут!</p> <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles.wav" controls></audio>
                         <br><br><p>Джунгли зовут! Теневая тема</p><audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles-Shadow Theme.wav" controls></audio>
                         <br><br><p>Последний час</p><audio src="https://hahahoj.github.io/smallsite/works/Pages/others/TheFinalHour.wav" controls></audio>
                         <hr class="hr-limiter">
-                        <div>
-                            <span>Последние версии игры:</span>
-                            <a href="https://cloud.mail.ru/public/8dHe/223QV6doe" target="_blank">💾 лежат тут</a>  
-                        </div>
                     </div>
                 </div>
             </article>
