fix: адаптировано под все браузеры, убрано лишнее с видео

--- a/works/index.html
+++ b/works/index.html
@@ -323,15 +323,15 @@
             <article class="section theme05 page006">
                 <div class="title-part__markup">
                     <h1>Это другое...</h1>
-                    <video id="ukko" src="https://hahahoj.github.io/smallsite/works/Pages/others/ukkooptimized.ogv" loop muted autoplay preload></video>
+                    <video id="ukko" src="https://hahahoj.github.io/smallsite/works/Pages/others/ukkooptimized.ogv" disablePictureInPicture loop muted autoplay preload></video>
                     <h2>В планах доделать на досуге полную сагу о Слейне 
                         (готовы 90% ресурсов к первым двум частям в версии для ZX-Spectrum и 
-                        были собраны три первых модуля в PC версии.
+                        были собраны три первых модуля в PC версии)
                     </h2>
                 </div>
                 <div class="description-part__markup background-others">
                     <div class="description-others">
-                        <h2>Немного ресурсов из не вышедших проектов:</h2>
+                        <h2>Немного ресурсов из не вышедших пока проектов:</h2>
                         <hr>
                         <br><p>Джунгли зовут!</p> <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles.wav" controls></audio>
                         <br><br><p>Джунгли зовут! Теневая тема</p><audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles-Shadow Theme.wav" controls></audio>
