feat: параллакс на шариках в портфолио

--- a/index.html
+++ b/index.html
@@ -213,5 +213,7 @@
                 <div class="footer__telegram"></div>
             </div>
         </footer>
+        
+        <script src="./js/effects.js"></script>
     </body>
 </html>
