feat: добавлено резюме и кнопки

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <nav class = "menu">
                     <ul class = "menu-row">
                         <li class = "menu__logo"></li>
-                        <li class = "menu__item">Обо мне</li>
-                        <li class = "menu__item">Навыки</li>
-                        <li class = "menu__item">Отзывы</li>
-                        <li class = "menu__item">Контакты</li>
-                        <li class = "menu__item">Портфолио</li>
+                        <li class = "menu__item sec_about">Обо мне</li>
+                        <li class = "menu__item sec_skill">Навыки</li>
+                        <li class = "menu__item sec_review">Отзывы</li>
+                        <li class = "menu__item sec_contacts">Контакты</li>
+                        <li class = "menu__item sec_portfolio">Портфолио</li>
                     </ul>       
                 </nav>
             </div>
@@ -52,7 +52,8 @@
                             верстку, оживить сайт при помощи Javascript и настроить на 
                             нём рекламу, написать приложения на заказ или создать 
                             симпатичные карточки товара с описанием оптимизированным для выдачи</p>
-                        <p> Есть опыт в создании интерактивных обучающих курсов и инди-игр</p>
+                        <p> Есть опыт в создании интерактивных обучающих курсов и инди-игр, 
+                            преподавания в университете</p>
                     </div>
 
                     <div class="main__button">ВЕРСИЯ ДЛЯ ПЕЧАТИ</div>
