fix: добавлены переходы на сайте хаузокон, где это возможно

--- a/works/Pages/oknahouse/index.html
+++ b/works/Pages/oknahouse/index.html
@@ -17,7 +17,7 @@
             <h2>Сайт не поддерживает разрешение вашего устройства</h2>
         </section>
 
-        <header class="header">
+        <header class="header" id="header">
             <div class="container">
                 <div class="header-row">
                     <div class="header-row-left-part">
@@ -25,11 +25,11 @@
                             <button class="dropdown__button"></button>
                             <nav class="dropdown__content">
                                 <ul class="dropdown__list">
-                                    <li><a href="#" class="dropdown__link">Услуги</a></li>
+                                    <li><a href="#services" class="dropdown__link">Услуги</a></li>
                                     <li><a href="#" class="dropdown__link">Продукция</a></li>
-                                    <li><a href="#" class="dropdown__link">О компании</a></li>
-                                    <li><a href="#" class="dropdown__link">Портфолио</a></li>
-                                    <li><a href="#" class="dropdown__link">Вопрос-ответ</a></li>
+                                    <li><a href="#about" class="dropdown__link">О компании</a></li>
+                                    <li><a href="#portfolio" class="dropdown__link">Портфолио</a></li>
+                                    <li><a href="#FAQ" class="dropdown__link">Вопрос-ответ</a></li>
                                     <li><a href="#" class="dropdown__link">Контакты</a></li>
                                 </ul>
                             </nav>
@@ -39,11 +39,11 @@
                     <div class="header__menu">
                         <nav class="menu__body">
                             <ul class="menu__list">
-                                <li><a href="#" class="menu__link">Услуги</a></li>
+                                <li><a href="#services" class="menu__link">Услуги</a></li>
                                 <li><a href="#" class="menu__link">Продукция</a></li>
-                                <li><a href="#" class="menu__link">О компании</a></li>
-                                <li><a href="#" class="menu__link">Портфолио</a></li>
-                                <li><a href="#" class="menu__link">Вопрос-ответ</a></li>
+                                <li><a href="#about" class="menu__link">О компании</a></li>
+                                <li><a href="#portfolio" class="menu__link">Портфолио</a></li>
+                                <li><a href="#FAQ" class="menu__link">Вопрос-ответ</a></li>
                                 <li><a href="#" class="menu__link">Контакты</a></li>
                             </ul>
                         </nav>
@@ -301,7 +301,7 @@
                 </div>
 
                 <div class="button-measure">
-                    <button class="button-measure__body" >
+                    <button class="button-measure__body">
                         <img class="button-measure__img" src="./images/header/icon1.svg" alt="Иконка" >
                         Оформить заявку на замер
                     </button>
@@ -411,4 +411,5 @@
             </div>
         </footer> 
     </body>
+    <script src="./js/script.js"></script>
 </html>
