--- a/works/index.html
+++ b/works/index.html
@@ -290,20 +290,20 @@
                         </p>  <br><hr>
                         <div>
                             <span>MassiveScrCompressor:</span>
-                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/MassiveScrCompressor 1.2b.ZIP" target="_blank">💾 лежит тут</a>
+                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/MassiveScrCompressor1.2b.ZIP" target="_blank">💾 лежит тут</a>
                         </div>
                         <p>Эта утилита организует одиночное и пакетное перекодирование .scr файлов (6912 байт) 
                             в формат .crp (2/3 экрана с раздельно сжатыми архиватором zx7 полями пикселей и атрибутов).</p>
                             <hr>
                         <div>
                             <span>UnCrp:</span>
-                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/UnCrp v.1.01.zip" target="_blank">💾 лежит тут</a>
+                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/UnCrpv.1.01.zip" target="_blank">💾 лежит тут</a>
                         </div>
                         <p>Утилита для предпросмотра .sca (упакованный одним блоком .scr) и .crp файлов под Windows. Можно повесить на дефолтовую реакцию Windows на указанные расширения.</p>
                         <hr class="hr-limiter">
                         <div>
                             <span>unzx7:</span>
-                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/unzx7 v.1.01.zip" target="_blank">💾 лежит тут</a>
+                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/unzx7v.1.01.zip" target="_blank">💾 лежит тут</a>
                         </div>
                         <p>Утилита для разархивации под Windows сжатых zx7 небольших файлов</p>
                     </div>
@@ -334,7 +334,7 @@
                         <h2>Немного ресурсов из не вышедших пока проектов:</h2>
                         <hr>
                         <br><p>Джунгли зовут!</p> <audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles.wav" controls></audio>
-                        <br><br><p>Джунгли зовут! Теневая тема</p><audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles-Shadow Theme.wav" controls></audio>
+                        <br><br><p>Джунгли зовут! Теневая тема</p><audio src="https://hahahoj.github.io/smallsite/works/Pages/others/CallOfJungles-ShadowTheme.wav" controls></audio>
                         <br><br><p>Последний час</p><audio src="https://hahahoj.github.io/smallsite/works/Pages/others/TheFinalHour.wav" controls></audio>
                         <hr class="hr-limiter">
                     </div>
