fix: пофикшено видео для мобилок

--- a/works/index.html
+++ b/works/index.html
@@ -369,7 +369,10 @@
             <article class="section theme05 page006">
                 <div class="title-part__markup">
                     <h1>Это другое...</h1>
-                    <video id="ukko" src="https://hahahoj.github.io/smallsite/works/Pages/others/ukkooptimized.ogv" disablePictureInPicture loop muted autoplay preload></video>
+                    <video id="ukko" poster="./Pages/others/ukko.png" disablePictureInPicture loop muted autoplay preload>
+                        <source src="./Pages/others/ukkooptimized2.mp4" type="video/mp4">
+                        <source src="./Pages/others/ukkooptimized.ogg" type="video/ogg">
+                    </video>
                     <h2>В планах доделать на досуге полную сагу о Слейне 
                         (готовы 90% ресурсов к первым двум частям в версии для ZX-Spectrum и 
                         были собраны три первых модуля в PC версии)
