fix: пофикшены отступы текста для мобилок

--- a/works/index.html
+++ b/works/index.html
@@ -116,6 +116,7 @@
                             <li>Введенную пользователем заявку отсылать на внешний сервер для дальнейшей обработки</li>
                             <li>Сделать только десктоп-версию, без адаптива</li>
                             <li>При нажатии кнопки "забронировать" перейти к оформлению заявки на конкретную машину</li>
+                            <li>Добавить переключатель типа машин между люксовыми и спортивными моделями и реализовать такое переключение</li>
                             <li>Шапку и подвал страницы не фиксировать</li>
                         </ul>
                         <hr class="hr-limiter">
