добавлено управление клавиатурой

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <section class = "intersection">
             <p>Сайт не предназначен для отображения в таком разрешении.
-                Смените ориентацию экрана или ваше устройство.
+                Смените ориентацию экрана.
             </p>
         </section>
         <header class = "header">
@@ -62,7 +62,8 @@
                             преподавания в университете</p>
                     </div>
 
-                    <div class="main__button">ВЕРСИЯ ДЛЯ ПЕЧАТИ</div>
+                    <div id="button" class="ready main__button" onclick="clickButton();">ВЕРСИЯ ДЛЯ ПЕЧАТИ</div>
+                    <!-- <div class="main__button">ВЕРСИЯ ДЛЯ ПЕЧАТИ</div> -->
                 </div>
 
             </div>
@@ -126,7 +127,7 @@
                         <li class="about__item">2022 год. Закончено обучение на курсах 
                             по переподготовке и повышению квалификации по направлению 
                             “Frontend-разработка” в институте Innopolis(Казань). 
-                            Получено свидетельство государственного образца </li>
+                            Получен диплом о переподготовке государственного образца </li>
                     </ul>
                 </div>
             </div>
@@ -221,6 +222,7 @@
             </div>
         </footer>
         
+        <!-- <script src="./js/AnimatedButton.js"></script> -->
         <script src="./js/effects.js"></script>
     </body>
 </html>
